[gd_scene load_steps=7 format=3 uid="uid://dm4hqicqej2fp"]

[ext_resource type="Script" path="res://scripts/turret.gd" id="1_ygdqc"]
[ext_resource type="Texture2D" uid="uid://dybp4yflwkv3n" path="res://resources/turret_body.png" id="2_osb2f"]
[ext_resource type="Texture2D" uid="uid://dhrscxpqg6qnb" path="res://resources/turret_barrel.png" id="3_niiqi"]
[ext_resource type="AudioStream" uid="uid://8o86phl3vsal" path="res://resources/laserShoot.wav" id="4_6o3la"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bgpaa"]
radius = 120.004

[sub_resource type="CircleShape2D" id="CircleShape2D_cmq0h"]
radius = 118.973

[node name="turret" type="CharacterBody2D"]
light_mask = 4
visibility_layer = 5
position = Vector2(124, 422)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_ygdqc")

[node name="turret_body" type="Sprite2D" parent="."]
position = Vector2(-3, 2)
scale = Vector2(0.249, 0.251)
texture = ExtResource("2_osb2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 2)
shape = SubResource("CircleShape2D_bgpaa")

[node name="Marker" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Marker"]

[node name="BarrelRotation" type="Node2D" parent="."]
position = Vector2(3.8147e-06, 3.8147e-06)
rotation = 4.71239

[node name="TurretBarrel" type="Sprite2D" parent="BarrelRotation"]
z_index = 3
position = Vector2(56.0078, 0.360196)
rotation = 1.5708
scale = Vector2(0.302, 0.336)
texture = ExtResource("3_niiqi")

[node name="turretArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="turretArea"]
position = Vector2(-2.5, 2.5)
shape = SubResource("CircleShape2D_cmq0h")

[node name="ShootingCool" type="Timer" parent="."]
wait_time = 0.11
one_shot = true

[node name="shootingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6o3la")
volume_db = -17.5
pitch_scale = 1.2

[connection signal="area_entered" from="turretArea" to="." method="_on_turret_area_area_entered"]
[connection signal="timeout" from="ShootingCool" to="." method="_on_shooting_cool_timeout"]
